bug: remove .page overflow

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,6 @@ code {
   width: 720px;
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
 }
 
 .page > .header {
